@@ -1,12 +1,39 @@
 {
-  "timestamp" : "2025-10-07T00:53:13Z",
-  "count_outdated" : 266,
-  "uniques_outdated" : 199,
-  "count" : 267,
-  "uniques" : 200,
+  "timestamp" : "2025-11-06T02:01:43Z",
+  "count_outdated" : 267,
+  "uniques_outdated" : 200,
+  "count" : 271,
+  "uniques" : 204,
   "clones" : [
     {
-      "timestamp": "2025-09-26T00:00:00Z",
+      "timestamp": "2025-10-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-10-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-10-31T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-11-03T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
