@@ -1,9 +1,24 @@
 {
-  "count": 1,
-  "uniques": 1,
+  "count": 4,
+  "uniques": 4,
   "clones": [
     {
-      "timestamp": "2025-09-26T00:00:00Z",
+      "timestamp": "2025-10-25T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-10-30T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-10-31T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-11-03T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
